# tarefa-freertos-2-caio

./: CMakeLists.txt  README.md  main.c
WhatsBot/: README.MD  index.js  package.json
include/: mqtt_comm.h
src/: mqtt_comm.c  ssd1306_i2c.c
